Update ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 #virtual environment
 customer_seg_proj/
 
+#video demo available on linkedin (link in Readme file)
+video_demo/
+
 #pickle models
 *.pkl
